--- a/index.html
+++ b/index.html
@@ -1,10 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=AW-16972244250"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "AW-16972244250");
+    </script>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Study Nursing in Australia</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./style.css" />
     <link rel="icon" href="/favicon.ico" type="image/x-icon" />
   </head>
   <body>
@@ -14,28 +28,43 @@
     </header>
 
     <div class="banner">
-      <img src="./img/banner.png" alt="Nursing Image" />
+      <img class="banner-nurse" src="./img/banner.png" alt="Nursing Image" />
       <div class="content">
         <h2>Study Nursing in <span>Australia</span></h2>
       </div>
 
       <div class="form-card">
+        <img src="./img/24YOE.png" />
         <h3>Contact Us Now</h3>
         <p style="font-size: 14px">
           To learn more about Courses, Scholarships, Work opportunities and
           Intakes.
         </p>
         <p style="font-size: 14px">Our Expert will get back to you.</p>
-        <form id="contactForm" action="contact_process.php" method="post" >
+        <form id="contactForm" action="contact_process.php" method="post">
           <div class="form-group">
-            <input type="text" placeholder="Full Name" name="name" pattern="^[a-zA-Z]+(?: [a-zA-Z]+)+$" required/>
+            <input
+              type="text"
+              placeholder="Full Name"
+              name="name"
+              pattern="^[A-Za-z ]+$"
+              required
+            />
           </div>
           <div class="form-group">
-            <input type="tel" placeholder="Telephone" name="phone" pattern="[0-9]+" required/>
+            <input
+              type="tel"
+              placeholder="Telephone"
+              name="phone"
+              pattern="[0-9]+"
+              required
+            />
           </div>
           <div class="form-group">
             <select name="program" required>
-              <option value="" disabled selected>Choose Preferred Program</option>
+              <option value="" disabled selected>
+                Choose Preferred Program
+              </option>
               <option value="BSc Nursing">BSc Nursing</option>
               <!-- <option value="Masters">Choose Masters</option> -->
               <option value="Other Enquiry">Other Enquiry</option>
@@ -48,7 +77,6 @@
         <div class="loader-overlay" id="loader">
           <div class="loader"></div>
         </div>
-      
       </div>
     </div>
 
@@ -60,8 +88,14 @@
       <h2>HOW DO WE DIFFER</h2>
       <div class="why-cards">
         <div>Direct Representative Australia Universities</div>
-        <div>Offices in India & Australia <br /> Kochi: 80865 11555 <br />Sydney: +61 466 41 1444</div>
-        <div>Visa/ Migration Help Australia Government Authorised Migration Agent MARA#1801063</div>
+        <div>
+          Offices in India & Australia <br />
+          Kochi: 80865 11555 <br />Sydney: +61 466 41 1444
+        </div>
+        <div>
+          Visa/ Migration Help Australia Government Authorised Migration Agent
+          MARA#1801063
+        </div>
       </div>
     </section>
 
@@ -72,22 +106,22 @@
           <img src="./img/check.png" style="width: 76px" /><br />Free IELTS/PTE
         </div>
         <div>
-          <img src="./img/check.png" style="width: 76px" /><br />Upto 50% Scholarships
+          <img src="./img/check.png" style="width: 76px" /><br />Upto 50%
+          Scholarships
         </div>
         <div>
-          <img src="./img/check.png" style="width: 76px" /><br />100% visa success - Feb 2025 Intake 
+          <img src="./img/check.png" style="width: 76px" /><br />100% visa
+          success - Feb 2025 Intake
         </div>
       </div>
     </section>
-
-
 
     <section class="testimonials testimonial-student">
       <h2>What Our Students Say</h2>
       <div class="slider-wrapper">
         <div class="arrow left" onclick="prevSlideStudent()">&#10094;</div>
 
-        <div class="slider-track" id="sliderTrackStudentSay"> 
+        <div class="slider-track" id="sliderTrackStudentSay">
           <div class="testimonial-card testimonial-card-student">
             <iframe
               width="360"
@@ -100,7 +134,7 @@
             >
             </iframe>
           </div>
-                    <div class="testimonial-card testimonial-card-student">
+          <div class="testimonial-card testimonial-card-student">
             <iframe
               width="360"
               height="500"
@@ -231,28 +265,80 @@
 
         <div class="slider-track" id="sliderTrack">
           <div class="testimonial-card testimonial-card-review">
-            <!-- <img src="student1.jpg" alt="Student 1" /> -->
+            <img src="./img/review/mariya-review.jpeg" alt="Student 1" />
             <p>
-              "I learned about International Academy through a friend. Recently, my Australian visa was approved, and I want to thank the entire staff for their incredible support throughout the process. If anyone is considering studying abroad, I highly recommend International Academy!"
+              "I learned about International Academy through a friend. Recently,
+              my Australian visa was approved, and I want to thank the entire
+              staff for their incredible support throughout the process. If
+              anyone is considering studying abroad, I highly recommend
+              International Academy!"
             </p>
             <h4>- Mariya Tony</h4>
           </div>
           <div class="testimonial-card testimonial-card-review">
-            <!-- <img src="student2.jpg" alt="Student 2" /> -->
+            <img src="./img/review/adele-review.jpeg" alt="Student 2" />
             <p>
-              "I recently got my Australian student visa through international academy. They provided best service all through the process and was very supportive. I did my PTE coaching also. All the staffs were helpful and friendly. Will suggest to everyone who are looking for an overseas education consultant. Hima mam, Margret mam and Blossom mam were excellent throughout the process"
+              "I recently got my Australian student visa through international
+              academy. They provided best service all through the process and
+              was very supportive. I did my PTE coaching also. All the staffs
+              were helpful and friendly. Will suggest to everyone who are
+              looking for an overseas education consultant. Hima mam, Margret
+              mam and Blossom mam were excellent throughout the process"
             </p>
             <h4>- Adele Shaji</h4>
           </div>
           <div class="testimonial-card testimonial-card-review">
-            <!-- <img src="student3.jpg" alt="Student 3" /> -->
-            <p>"Impeccable guidance for overseas studies and coaching. I wholeheartedly commend the team at International Academy for their exceptional guidance and support. My goal of studying in an abroad country has become a reality only because of International Academy. After facing multiple visa rejections from other agency, they didn't even hesitate to help me, they were so welcoming and their crew offered outstanding advice at every stage of the procedure even from doing PTE coaching and choosing the best University at Australia for my masters and recently, I got my Australian student visa. A special thanks to the whole crew of International Academy for your unwavering support and invaluable advice. I highly recommend International Academy, if you are looking for a trustworthy assistance for your International education plans."</p>
+            <img src="./img/review/elsa-review.jpeg" alt="Student 3" />
+            <p>
+              "Impeccable guidance for overseas studies and coaching. I
+              wholeheartedly commend the team at International Academy for their
+              exceptional guidance and support. My goal of studying in an abroad
+              country has become a reality only because of International
+              Academy. After facing multiple visa rejections from other agency,
+              they didn't even hesitate to help me, they were so welcoming and
+              their crew offered outstanding advice at every stage of the
+              procedure even from doing PTE coaching and choosing the best
+              University at Australia for my masters and recently, I got my
+              Australian student visa. A special thanks to the whole crew of
+              International Academy for your unwavering support and invaluable
+              advice. I highly recommend International Academy, if you are
+              looking for a trustworthy assistance for your International
+              education plans."
+            </p>
             <h4>- Elsa Eldho</h4>
           </div>
           <div class="testimonial-card testimonial-card-review">
-            <!-- <img src="student4.jpg" alt="Student 4" /> -->
-            <p>"I had an exceptional experience with International Academy for my Australian student visa. Despite my special case of a previous visa withdrawal, they provided fast replies and genuine consideration. Their professionalism and support gave me hope, and I am truly grateful. Thank you, International Academy, for making my dream of studying in Australia possible!"</p>
+            <img src="./img/review/sandra-review.jpeg" alt="Student 4" />
+            <p>
+              "I had an exceptional experience with International Academy for my
+              Australian student visa. Despite my special case of a previous
+              visa withdrawal, they provided fast replies and genuine
+              consideration. Their professionalism and support gave me hope, and
+              I am truly grateful. Thank you, International Academy, for making
+              my dream of studying in Australia possible!"
+            </p>
             <h4>- Sandhra Jenny</h4>
+          </div>
+          <div class="testimonial-card testimonial-card-review">
+            <img src="./img/review/prince-review.jpg" alt="Student 5" />
+            <p>
+              "My heartfelt thanks to the International Academy... ❤ I got a
+              visa to study Master of Engineering in Mechanical Specialization
+              in Edith cowan University in Australia and International Academy
+              Kochi did everything for me. I am a mechanical engineer and after
+              my studies I was looking for an opportunity to study abroad then
+              my friends suggested International Academy to me because all my
+              friends went through International Academy and now they are
+              studying Masters degree in university. All my documentation at
+              International Academy was done by Blossom mam and I was very
+              satisfied with it and another thing whenever I called them they
+              were there to answer any doubts so I really like International
+              Academy. Also Rajeev sir did all my visa documentation and I was
+              very satisfied .Also, I suggest this international academy for all
+              students who are planning to study abroad. Once again thanks to
+              the International Academy...."
+            </p>
+            <h4>- Prince Saju</h4>
           </div>
         </div>
         <div class="arrow right" onclick="nextSlideReview()">&#10095;</div>
@@ -264,37 +350,39 @@
     <div class="contact-us" id="contact-us">Contact us</div>
 
     <script>
-  const sliderTrack = document.getElementById("sliderTrack");
-  const reviewCards = document.querySelectorAll(".testimonial-card-review");
+      const sliderTrack = document.getElementById("sliderTrack");
+      const reviewCards = document.querySelectorAll(".testimonial-card-review");
 
-  let currentReviewIndex = 0;
+      let currentReviewIndex = 0;
 
-  function updateSliderReview() {
-    sliderTrack.style.transform = `translateX(-${100 * currentReviewIndex}%)`;
-  }
+      function updateSliderReview() {
+        sliderTrack.style.transform = `translateX(-${
+          100 * currentReviewIndex
+        }%)`;
+      }
 
-  function nextSlideReview() {
-    if (currentReviewIndex < reviewCards.length - 1) {
-      currentReviewIndex++;
-    } else {
-      currentReviewIndex = 0; // loop back to start
-    }
-    updateSliderReview();
-  }
+      function nextSlideReview() {
+        if (currentReviewIndex < reviewCards.length - 1) {
+          currentReviewIndex++;
+        } else {
+          currentReviewIndex = 0; // loop back to start
+        }
+        updateSliderReview();
+      }
 
-  function prevSlideReview() {
-    if (currentReviewIndex > 0) {
-      currentReviewIndex--;
-    } else {
-      currentReviewIndex = reviewCards.length - 1; // loop to end
-    }
-    updateSliderReview();
-  }
+      function prevSlideReview() {
+        if (currentReviewIndex > 0) {
+          currentReviewIndex--;
+        } else {
+          currentReviewIndex = reviewCards.length - 1; // loop to end
+        }
+        updateSliderReview();
+      }
 
       window.addEventListener("resize", () => {
         position = 0;
-        updateSliderReview()
-        updateSliderStudent()
+        updateSliderReview();
+        updateSliderStudent();
         handleScroll();
       });
 
@@ -317,44 +405,45 @@
         window.scrollTo({ top: 0, behavior: "smooth" });
       });
 
+      const sliderTrackStudent = document.getElementById(
+        "sliderTrackStudentSay"
+      );
+      const testimonialCard = document.querySelectorAll(
+        ".testimonial-card-student"
+      );
 
-  const sliderTrackStudent = document.getElementById("sliderTrackStudentSay");
-  const testimonialCard = document.querySelectorAll(".testimonial-card-student");
+      let currentIndexStudent = 0;
 
-  let currentIndexStudent = 0;
+      function nextSlideStudent() {
+        if (currentIndexStudent < testimonialCard.length - 1) {
+          currentIndexStudent++;
+        } else {
+          currentIndexStudent = 0; // loop back to start
+        }
+        updateSliderStudent();
+      }
 
-  function nextSlideStudent() {
+      function prevSlideStudent() {
+        if (currentIndexStudent > 0) {
+          currentIndexStudent--;
+        } else {
+          currentIndexStudent = testimonialCard.length - 1; // loop to end
+        }
+        updateSliderStudent();
+      }
 
-    if (currentIndexStudent < testimonialCard.length - 1) {
-      currentIndexStudent++;
-    } else {
-      currentIndexStudent = 0; // loop back to start
-    }
-    updateSliderStudent()
-  }
+      function updateSliderStudent() {
+        sliderTrackStudent.style.transform = `translateX(-${
+          100 * currentIndexStudent
+        }%)`;
+      }
 
-  function prevSlideStudent() {
-    if (currentIndexStudent > 0) {
-      currentIndexStudent--;
-    } else {
-      currentIndexStudent = testimonialCard.length - 1; // loop to end
-    }
-    updateSliderStudent()
-  }
+      const form = document.getElementById("contactForm");
+      const loader = document.getElementById("loader");
 
-  function updateSliderStudent(){
-    sliderTrackStudent.style.transform = `translateX(-${100 * currentIndexStudent}%)`;
-  }
-
-
-  const form = document.getElementById('contactForm');
-    const loader = document.getElementById('loader');
-
-    form.addEventListener('submit', function () {
-      loader.style.display = 'flex';
-    });
-
-
+      form.addEventListener("submit", function () {
+        loader.style.display = "flex";
+      });
     </script>
   </body>
 </html>
