--- a/success/index.html
+++ b/success/index.html
@@ -1,114 +1,129 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Thank You</title>
-  <style>
-    body {
-      margin: 0;
-      padding: 0;
-      background: #f7f9fc;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    }
-
-    .container {
-      background: white;
-      padding: 40px;
-      border-radius: 16px;
-      box-shadow: 0 10px 30px rgba(0, 0, 0, 0.05);
-      text-align: center;
-      max-width: 400px;
-      width: 90%;
-    }
-
-    .checkmark-circle {
-      width: 80px;
-      height: 80px;
-      border-radius: 50%;
-      background: #4BB543;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      margin: 0 auto 20px;
-      animation: pop 0.3s ease-out forwards;
-    }
-
-    .checkmark {
-      width: 30px;
-      height: 15px;
-      border-left: 4px solid white;
-      border-bottom: 4px solid white;
-      transform: rotate(-45deg);
-      animation: draw 0.5s ease forwards;
-    }
-
-    h1 {
-      font-size: 24px;
-      margin-bottom: 10px;
-      color: #333;
-    }
-
-    p {
-      color: #666;
-      margin: 0 0 20px;
-    }
-
-    .back-button {
-      background-color: #4BB543;
-      color: white;
-      padding: 10px 20px;
-      border: none;
-      border-radius: 8px;
-      font-size: 16px;
-      text-decoration: none;
-      cursor: pointer;
-      transition: background-color 0.3s ease;
-      display: inline-block;
-    }
-
-    .back-button:hover {
-      background-color: #3ea136;
-    }
-
-    @keyframes pop {
-      0% {
-        transform: scale(0.5);
-        opacity: 0;
+  <head>
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=AW-16972244250"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
       }
-      100% {
-        transform: scale(1);
-        opacity: 1;
-      }
-    }
+      gtag("js", new Date());
 
-    @keyframes draw {
-      from {
-        width: 0;
-        height: 0;
+      gtag("config", "AW-16972244250");
+    </script>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Study Nursing in Australia - Thank You</title>
+    <style>
+      body {
+        margin: 0;
+        padding: 0;
+        background: #f7f9fc;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
+        font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
       }
-      to {
+
+      .container {
+        background: white;
+        padding: 40px;
+        border-radius: 16px;
+        box-shadow: 0 10px 30px rgba(0, 0, 0, 0.05);
+        text-align: center;
+        max-width: 400px;
+        width: 90%;
+      }
+
+      .checkmark-circle {
+        width: 80px;
+        height: 80px;
+        border-radius: 50%;
+        background: #4bb543;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin: 0 auto 20px;
+        animation: pop 0.3s ease-out forwards;
+      }
+
+      .checkmark {
         width: 30px;
         height: 15px;
+        border-left: 4px solid white;
+        border-bottom: 4px solid white;
+        transform: rotate(-45deg);
+        animation: draw 0.5s ease forwards;
       }
-    }
-  </style>
-</head>
-<body>
-  <div class="container">
-    <div class="checkmark-circle">
-      <div class="checkmark"></div>
+
+      h1 {
+        font-size: 24px;
+        margin-bottom: 10px;
+        color: #333;
+      }
+
+      p {
+        color: #666;
+        margin: 0 0 20px;
+      }
+
+      .back-button {
+        background-color: #4bb543;
+        color: white;
+        padding: 10px 20px;
+        border: none;
+        border-radius: 8px;
+        font-size: 16px;
+        text-decoration: none;
+        cursor: pointer;
+        transition: background-color 0.3s ease;
+        display: inline-block;
+      }
+
+      .back-button:hover {
+        background-color: #3ea136;
+      }
+
+      @keyframes pop {
+        0% {
+          transform: scale(0.5);
+          opacity: 0;
+        }
+        100% {
+          transform: scale(1);
+          opacity: 1;
+        }
+      }
+
+      @keyframes draw {
+        from {
+          width: 0;
+          height: 0;
+        }
+        to {
+          width: 30px;
+          height: 15px;
+        }
+      }
+    </style>
+  </head>
+  <body>
+    <div class="container">
+      <div class="checkmark-circle">
+        <div class="checkmark"></div>
+      </div>
+      <h1>Thank You!</h1>
+      <p>Your submission has been received.</p>
+      <a href="" id="backToHome" class="back-button">Back to Home</a>
     </div>
-    <h1>Thank You!</h1>
-    <p>Your submission has been received.</p>
-    <a href="" id="backToHome" class="back-button">Back to Home</a>
-  </div>
-  <script>
-     document.getElementById("backToHome").href = window.location.origin + "/study-in-australia";
-  </script>
-</body>
+    <script>
+      document.getElementById("backToHome").href =
+        window.location.origin + "/study-in-australia";
+    </script>
+  </body>
 </html>
